This change disables the check of the jar file signatures. The signature algorithms are not valid any more. Newer versions of java will not verify the old signatures.